# VisionFleet

./: README.md
assets/: active_roadblocks.json  active_zones.json  attach_control.py  bike_navigator.py  bike_stack.json  fleet_driver.py  fleet_spawner.py  generate_map.py  spawn_obstacles.py  spawned_bikes.json  steps and commands  test.py  town10_bounds.json
assets/bike_instances/: bike_1.json  bike_2.json  bike_3.json  bike_4.json
src/visionfleet_biker/: CMakeLists.txt  package.xml
src/visionfleet_biker/launch/: visionfleet_infra.launch.py  visionfleet_session.launch.py
src/visionfleet_biker/scripts/: carla_observer_node.py  detection_node.py  fusion_node.py  gps_map_node.py  map_node.py
